# Wetterstation

./: .ccsproject  .cproject  .gitignore  .gitmodules  .project  README.md  main.c
.github/workflows/: internalSensorBuild.yml
.launches/: Wetterstation.launch
LaTeX/: .gitignore  Ablauf extern.drawio  Ablauf intern.drawio  Ausarbeitung.tex  Kommunikation.drawio  Systemuebersicht.drawio  dataTypes.h  eventloop.rs  gui.slint
MeteoSim/MeteoSim/: MeteoSim.ino
Wetterstation/: .cproject
arduino/433MHz-arduinotest/Receiver/: Receiver.ino
arduino/433MHz-arduinotest/Transmitter/: Transmitter.ino
arduino/dcf77-arduinotest/: dcf77-arduinotest.ino
arduino/dcf77-meteotime-arduinotest/: dcf77-meteotime-arduinotest.ino
arduino/externalSensor/: DCF77.h  externalSensor.ino
arduino/internaluC/: internaluC.ino
arduino_libraries/: README.md
arduino_libraries/DCF77/: DCF77.cpp
arduino_testprograms/HC-12-test/HC-12-test/: HC-12-test.ino
arduino_testprograms/co2-uart-arduinotest/: co2-uart-arduinotest.ino
arduino_testprograms/dcf77-arduinotest/: dcf77-arduinotest.ino
arduino_testprograms/meteoDecoder/: Vorlage.ino  Vorlage2.ino
dcf77-pico/: Cargo.toml
dcf77-pico/.cargo/: config.toml
dcf77-pico/src/: main.rs
externalSensor_esp/: DCF77.cpp  DCF77.h  DataTypes.h  Utils.cpp  externalSensor_esp.ino
externalSensor_msp/: .ccsproject  .cproject  .project  README.md  main.c
externalSensor_msp/.launches/: externalSensor_msp.launch
externalSensor_msp/Debug/: externalSensor_msp.map  externalSensor_msp.out  externalSensor_msp_linkInfo.xml  main.d  makefile  subdir_rules.mk
externalSensor_msp/bme280/: bme280.c  bme280.h
externalSensor_msp/drivers/board/: board.c
externalSensor_msp/drivers/i2c/: i2c.c  i2c.h
externalSensor_msp/drivers/uart/: uart.c
externalSensor_nano/: DCF77.cpp  DCF77.h  DataTypes.h  Meteo.cpp  Meteo.h  Utils.cpp  Utils.h  externalSensor_nano.ino
externalSensor_nano_dcfFilter/: externalSensor_nano_dcfFilter.ino
internalSensor_esp/: DataTypes.h  internalSensor_esp.ino
internalSensor_pico_arduino/: CO2.cpp  CO2.h  DataTypes.h  Meteo.cpp  Meteo.h  internalSensor_pico_arduino.ino
pcbs/ExternalPCB/: ExternalPCB.kicad_pcb  ExternalPCB.kicad_prl  ExternalPCB.kicad_pro  ExternalPCB.kicad_sch  ExternalPCB.xml  fp-info-cache
pcbs/ExternalPCB/Gerber/: ExternalPCB-B_Cu.gbl  ExternalPCB-B_Mask.gbs  ExternalPCB-B_Paste.gbp  ExternalPCB-B_Silkscreen.gbo  ExternalPCB-Edge_Cuts.gm1  ExternalPCB-F_Cu.gtl  ExternalPCB-F_Mask.gts  ExternalPCB-F_Paste.gtp  ExternalPCB-F_Silkscreen.gto  ExternalPCB-NPTH.drl  ExternalPCB-PTH.drl  ExternalPCB-top-pos.csv  ExternalPCB-top-pos.xlsx  ExternalPCB.csv  ExternalPCB.xlsx
pcbs/InternalPCB/: InternalPCB.kicad_pcb  InternalPCB.kicad_prl  InternalPCB.kicad_pro  InternalPCB.kicad_sch  fp-info-cache  ~InternalPCB.kicad_sch.lck
pcbs/InternalPCB/Gerber/: InternalPCB-B_Cu.gbl  InternalPCB-B_Mask.gbs  InternalPCB-B_Paste.gbp  InternalPCB-B_Silkscreen.gbo  InternalPCB-Edge_Cuts.gm1  InternalPCB-F_Cu.gtl  InternalPCB-F_Mask.gts  InternalPCB-F_Paste.gtp  InternalPCB-F_Silkscreen.gto  InternalPCB-NPTH.drl  InternalPCB-PTH.drl
pcbs/InternalPCBV2/: Display-RTC.kicad_sch  InternalPCBV2.kicad_pcb  InternalPCBV2.kicad_prl  InternalPCBV2.kicad_pro  InternalPCBV2.kicad_sch  Sensors.kicad_sch  fp-info-cache  fp-lib-table
pcbs/Libs/footprints/: MH-Z19B-3DModel.step  MH-Z19B-FOOT.kicad_mod  Pico-ResTouch-LCD-2.8.kicad_mod
pcbs/Libs/footprints/XTAL_HC-Abracon-ABLS.pretty/: XTAL_HC&slash_49US_ABLS_ABR-L.kicad_mod  XTAL_HC&slash_49US_ABLS_ABR-M.kicad_mod  XTAL_HC&slash_49US_ABLS_ABR.kicad_mod
pcbs/Libs/symbols/: MH-Z19B.kicad_sym  XTAL_HC-Abracon-ABLS.kicad_sym  pico-restouch-lcd-2.8.kicad_sym
pcbs/externalPCB/: README.md
slint-pico/: Cargo.toml  README.md  build.rs  connectDebugger.sh
slint-pico/.cargo/: config.toml
slint-pico/src/: display_interface_spi.rs  main.rs  meteotime.rs  pico_backend.rs  simulator_support.rs  uc_support.rs  xpt2046.rs
slint-pico/ui/: appwindow.slint  images.slint  mcu_window.slint  newappwindow.slint  small_main.slint  theme.slint
slint-pico/ui/blocks/: header.slint
slint-pico/ui/pages/: about.slint  dashboard.slint  overview.slint  pages.slint  time.slint  weather.slint
slint-pico/ui/pages/menu_page/: menu_overview.slint  menu_page.slint
slint-pico/ui/widgets/: menu.slint  tile.slint  value_display.slint
wetterstation-arduinosensor/: wetterstation-arduinosensor.ino
wetterstation-rpico-ui/: Cargo.toml
wetterstation-rpico-ui/.cargo/: config.toml
wetterstation-rpico-ui/slint/: main.slint
wetterstation-rpico-ui/src/: build.rs  main.rs
wetterstation-ui/: Cargo.toml
wetterstation-ui/slint/: main.slint
wetterstation-ui/src/: build.rs  main.rs  ringtest.rs  sched.rs
