[package]
name = "slint-pico"
version = "0.1.0"
edition = "2021"
build = "build.rs"
rust-version = "1.71.0"
authors = ["Lasse Kelling <lasse@kelling.de>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
slint = { version = "=1.3.1", default-features = false, features = ["compat-1-2", "renderer-software"] }

panic-halt = { version = "0.2.0", optional = true } # Wenn man keine DebugProbe verwendet
defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4.0", optional = true }
panic-probe = { version = "0.3.1", features = ["print-defmt"], optional = true}
#display-interface-spi = { version = "0.4.1", optional = true}
embedded-graphics-core = { version = "0.3.3", optional = true } #TODO migrieren auf v0.4

# Wi-Fi und Bluetooth
#cyw43 = "0.0.0"
# cyw43-pio = { version = "0.0.0", optional = true }
#embassy-executor = { version = "0.3.3", optional = true }
#embassy-net = { version = "0.2.1", optional = true }
#embassy-time = { version = "0.1.5", optional = true }
# embassy-rp = { version = "0.0.0", optional = true }
# embedded-io-async = { version = "0.6.0", optional = true }
#static_cell = { version = "2.0.0", optional = true }


derive_more = "0.99.5"
embedded-graphics = { version = "0.7.1", optional = true }
once_cell = { version = "1.9", default-features = false, features = ["alloc"] }
pin-weak = { version = "1", default-features = false }
rgb = "0.8.27"
cfg-if = "1"

embedded-alloc = { version = "0.5", optional = true }
cortex-m-rt = { version = "0.7", optional = true }
cortex-m = { version = "0.7.2", optional = true }
display-interface = { version = "0.4.1", optional = true }
embedded-hal = { version = "0.2.5", optional = true }
embedded-dma = { version = "0.2.0", optional = true }

rp-pico = { version = "0.8.0", optional = false } #TODO wird so nicht als Simulator kompilieren, trickst aber die IDE aus...
fugit = { version = "0.3.6", optional = true }
shared-bus = { version = "0.3", optional = true }
st7789 = { version = "0.7.0", optional = true }
euclid = { version = "0.22", default-features = false, optional = true }
heapless = { version = "0.8.0", optional = true }
log = "0.4.20"


[build-dependencies]
slint-build = { version = "1.0.0" }


[features]
wifi-ap = [
    # "cyw43-pio",
    #"embassy-executor",
    #"embassy-net",
    #"embassy-net/dhcpv4",
    #"embassy-net/tcp",
    # "embedded-io-async",
    #"embassy-time",
    # "embassy-rp",
    #"static_cell",
]
simulator = ["slint/renderer-winit-software", "slint/backend-winit"]
pico = [
    "slint/unsafe-single-threaded",
    "slint/libm",
    # "rp-pico",
    "cortex-m",
    "cortex-m-rt",
    "embedded-alloc",
    "embedded-hal",
    "embedded-dma",
    "fugit",
    "st7789",
    #"display-interface-spi",
    "embedded-graphics-core",
    "shared-bus",
    #"panic-halt",
    "defmt",
    "defmt-rtt",
    "panic-probe",
    "panic-probe/print-defmt",
    #"wifi-ap",
    "display-interface",
    "euclid",
    "euclid/libm",
    "heapless"
]


[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true


# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false


[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false


[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

