[package]
name = "wetterstation-rpico-ui"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[dependencies]
slint = { git = "https://github.com/slint-ui/slint", default-features = false }
mcu-board-support = { git = "https://github.com/slint-ui/slint" }

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint" }