[package]
name = "wetterstation-ui"
version = "0.1.1"
edition = "2021"
authors = ["Lasse Kelling <lasse@kelling.de>, Fabian Schmalenbach <>"]
build = "src/build.rs"

[dependencies]
slint = "1.2.2"
chrono = "0.4.19"
serialport = "4.2.2"
clokwerk = "0.4.0"
serde_json = "1.0.107"
serde = "1.0.190"
ringbuffer = "0.15.0"
log = "0.4"
log4rs = "1.0.0"

[build-dependencies]
slint-build = "1.2.2"
